# flare-vtpm-attestation

./: .env.example  .gitignore  51d4e753-d4f2-410f-addd-c08b20747468.jsonl  AGENT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ed629b7d-cba7-4dad-885f-26ee9ecbce0e.jsonl  foundry.toml  issue.md  package-lock.json  package.json  remappings.txt
.github/workflows/: build_and_test.yml  slither_analysis.yml  validate_pr_title.yml
contracts/: FlareVtpmAttestation.sol  FlareVtpmAttestationV2.sol  PkiAttestation.sol
contracts/interfaces/: IAttestation.sol  IVerification.sol
contracts/test/: FlareVtpmAttestationV2.sol
contracts/types/: Common.sol  OidcStructs.sol  PkiStructs.sol
contracts/utils/: BigNumber.sol  CryptoUtils.sol  JWTHandler.sol  PKICertificateParser.sol  ParserUtils.sol
contracts/verifiers/: OidcSignatureVerification.sol  PKIValidator.sol
py/: oidc_attestation_validation.py  pki_attestation_validation.py  pyproject.toml  utils.py
script/: FlareVtpmAttestation.s.sol
test/: FlareVtpmAttestation.t.sol  FlareVtpmAttestationUpgrade.t.sol  PkiAttestation.t.sol
